# rcfe

./: .gitignore  Cargo.toml  README.md  build.rs  example.env
crates/rcfe-core/: Cargo.toml  README.md  build.rs
crates/rcfe-core/proto/: auth.proto  election.proto  kv.proto  lock.proto  rpc.proto
crates/rcfe-core/src/: client.rs  error.rs  factory.rs  kv.rs  lease.rs  lib.rs  options.rs  prelude.rs  txn.rs  watch.rs
crates/rcfe-core/src/options/: client.rs  compact.rs  delete.rs  get.rs  kv.rs  lease.rs  put.rs  txn.rs  watch.rs
crates/rcfe-core/src/options/lease/: grant.rs
crates/rcfe-core/src/options/txn/: compare.rs  op.rs
crates/rcfe-test/: Cargo.toml
crates/rcfe-test/tests/: byte_sequence.rs  common.rs  factory.rs  kv.rs  lease.rs  txn.rs  watch.rs
examples/example-core/: Cargo.toml
examples/example-core/locales/en-US/: main.ftl
examples/example-core/locales/zh-CN/: main.ftl
examples/example-core/src/: html.rs  i18n.rs  lib.rs
examples/key-value/: Cargo.toml
examples/key-value/assets/: _layout.css
examples/key-value/assets/scripts/: index.js
examples/key-value/assets/styles/: index.css
examples/key-value/src/: index.rs  main.rs
examples/key-value/templates/: _layout.html  index.html
proto/: lock.proto  rpc.proto
rcfe/: Cargo.toml  README.md
rcfe/examples/: watch.rs
rcfe/src/: client.rs  factory.rs  kv.rs  lease.rs  lib.rs  prelude.rs  txn.rs  watch.rs
src/: client.rs  error.rs  lib.rs
tests/: client.rs
