[package]
authors = ["Jixiang Liu <jixiangup@gmail.com>"]
name = "rcfe"
version = "0.1.0"
edition = "2024"
description = "RCFE is a Rust Client for ETCD V3."
documentation = "https://docs.rs/rcfe"
homepage = "https://github.com/hipeday/rcfe"
keywords = ["etcd", "client", "etcdv3", "gRPC"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hipeday/rcfe"

[lib]
[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic-prost = "0.14.2"
tonic = "0.14.2"
thiserror = "2.0.17"

[build-dependencies]
tonic-prost-build = "0.14.2"