[workspace]
resolver = "2"
members = [
    "rcfe", # Main etcd client library
    "crates/rcfe-core", # Core library for RCFE functionality
    "crates/rcfe-test", # Test utilities and integration tests
]

[workspace.package]
rust-version = "1.89.0"
version = "0.1.1"
keywords = ["etcd", "client", "etcdv3", "gRPC"]
categories = ["network-programming", "asynchronous"]
edition = "2024"
description = "An asynchronous etcd v3 client library for Rust built on gRPC."
documentation = "https://docs.rs/rcfe"
homepage = "https://github.com/hipeday/rcfe"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hipeday/rcfe"

[workspace.dependencies]
# Local workspace dependencies
rcfe-core = { path = "crates/rcfe-core", version = "0.1.1" }
rcfe = { path = "rcfe", version = "0.1.1" }

# External dependencies
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic-prost = "0.14.2"
tonic = "0.14.2"
thiserror = "2.0.17"
tonic-prost-build = "0.14.2"
dotenvy = "0.15.7"