[workspace]
resolver = "2"
members = [
    "rcfe", # Main etcd client library
    "crates/rcfe-core", # Core library for RCFE functionality
    # Test utilities and integration tests
    "crates/rcfe-test",
    # Example applications
    "examples/key-value", "examples/example-core",
]

[workspace.package]
rust-version = "1.89.0"
version = "0.1.2"
keywords = ["etcd", "client", "etcdv3", "gRPC"]
categories = ["network-programming", "asynchronous"]
edition = "2024"
description = "An asynchronous etcd v3 client library for Rust built on gRPC."
documentation = "https://docs.rs/rcfe"
homepage = "https://github.com/hipeday/rcfe"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hipeday/rcfe"

[workspace.dependencies]
# Local workspace dependencies
rcfe-core = { path = "crates/rcfe-core", version = "0.1.2" }
rcfe = { path = "rcfe", version = "0.1.2" }

# External dependencies
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic-prost = "0.14.2"
tonic = "0.14.2"
thiserror = "2.0.17"
tonic-prost-build = "0.14.2"
dotenvy = "0.15.7"

# Logging
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

# For examples
axum = { version = "0.8.7", features = ["macros"] }
askama = { version = "0.14.0" }
example-core = { path = "examples/example-core", features = ["tracing-subscriber"] }
serde = { version = "1.0.228", features = ["derive"] }
filters = "0.4.0"
serde_urlencoded = "0.7.1"
fluent-templates = "0.13.2"
tower-http = { version = "0.6.7", features = ["fs", "trace"] }
serde_with = "3.16.1"