[package]
name = "rcfe"
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../README.md"
repository.workspace = true

[dependencies]
rcfe-core.workspace = true
tonic.workspace = true
tokio.workspace = true

[dev-dependencies]
dotenvy.workspace = true

[[example]]
name = "watch"
path = "examples/watch.rs"