[package]
name = "rcfe-core"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
serde.workspace = true

[dev-dependencies]
tokio.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
