[package]
name = "example-core"
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
dotenvy.workspace = true
askama.workspace = true
axum.workspace = true
serde.workspace = true
tracing-subscriber = { workspace = true, optional = true}
rcfe.workspace = true
fluent-templates.workspace = true
