[package]
name = "key-value"
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
rcfe.workspace = true
tokio.workspace = true
axum.workspace = true
askama.workspace = true
example-core.workspace = true
tracing.workspace = true
serde.workspace = true
tower-http.workspace = true
serde_urlencoded.workspace = true
serde_with.workspace = true